# Automata

./: CMakeLists.txt  main.cpp
simple/: main.cpp
src/: main.cpp
src/core/: dfa.cpp  dfa.h  nfa.cpp  nfa.h  subset.cpp  subset.h  thompson.cpp  thompson.h  tokens.cpp  tokens.h
src/gui/: automataview.cpp  automataview.h  mainwindow.cpp  mainwindow.h  nfaview.cpp  nfaview.h
src/lexer/: tokenizer.cpp  tokenizer.h
src/parser/: grammar.cpp  grammar.h  parser.cpp  parser.h
src/validator/: validator.cpp  validator.h
